# novel-audiobook-generator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_REPORT.md  ITERATION.md  Makefile  OPTIMIZATION_PLAN.md  README.md  RESEARCH.md  VOICE_CLONING_REPORT.md  WEBUI_DESIGN.md  config.example.yaml  docker-compose.yml  generate_audiobook.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_webui.sh  webui.py
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  TROUBLESHOOTING.md  TUTORIAL.md
src/: __init__.py  audio_effects.py  audio_quality.py  audio_utils.py  cache.py  chapter_detector.py  cli.py  config.py  dialogue_detector.py  exceptions.py  export.py  generator.py  health.py  logger.py  logging_config.py  memory_monitor.py  plugin.py  presets.py  progress_manager.py  progress_tracker.py  stats.py  streaming_pipeline.py  task_queue.py  text_processor.py  utils.py  validator.py  voice_manager.py
src/tts_backends/: __init__.py  doubao.py  elevenlabs.py  kokoro.py  xtts.py
tests/: conftest.py  test_cache.py  test_chapter_detector.py  test_comprehensive.py  test_doubao_backend.py  test_doubao_complete.py  test_generator.py  test_integration.py  test_memory_monitor.py  test_performance.py  test_streaming_pipeline.py  test_task_queue.py  validate_doubao.py
