[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-audiobook-generator"
version = "1.3.0"
description = "AI-powered audiobook generator for novels with voice cloning capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Novel Audiobook Generator Team"}
]
keywords = ["audiobook", "tts", "voice-cloning", "novel", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "numpy>=1.24.0,<2.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "ebooklib>=0.18",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "nltk>=3.8.1",
    "spacy>=3.7.0,<4.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    "librosa>=0.10.0",
    "mutagen>=1.47.0",
    "gradio>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=1.0.0"]
xtts = ["TTS>=0.22.0", "torch>=2.0.0", "torchaudio>=2.0.0"]
kokoro = ["kokoro-onnx>=0.1.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
all = [
    "elevenlabs>=1.0.0",
    "TTS>=0.22.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
novel-audiobook-generator = "generate_audiobook:main"
audiobook-gen = "generate_audiobook:main"
audiobook-webui = "webui:main"

[project.urls]
Homepage = "https://github.com/YwL-zhufeng/novel-audiobook-generator"
Documentation = "https://github.com/YwL-zhufeng/novel-audiobook-generator#readme"
Repository = "https://github.com/YwL-zhufeng/novel-audiobook-generator"
Issues = "https://github.com/YwL-zhufeng/novel-audiobook-generator/issues"

[tool.setuptools]
packages = ["src", "src.tts_backends"]

[tool.setuptools.package-dir]
src = "src"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_api: marks tests that require API keys",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
